@@ -66,6 +66,10 @@ module QC
     default_queue.respond_to?(method_name)
   end
 
+  def self.default_queue=(queue)
+    @default_queue = queue
+  end
+
   def self.default_queue
     @default_queue ||= begin
       Queue.new(QUEUE)
